fix(prebuilt-feature): creating a maven project for the sources
Signed-off-by: Jaroslav Tulach <jaroslav.tulach@apidesign.org>